# safu-protocol

./: .gitignore  LICENSE  README.md  deploy-safu-website.sh  foundry.toml
contracts/: SAFUPool.sol  SAFUPool.v6.backup.sol  SAFUPoolV7.sol  SAFUPoolV8.sol
docs/: oracle-runbook.md
script/: Deploy.s.sol
sol/: Anchor.toml  rust-toolchain.toml
sol/programs/sol/: Cargo.toml
sol/programs/sol/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs  utils.rs
sol/programs/sol/src/instructions/: admin.rs  approve_override.rs  cancel_claim.rs  initialize.rs  stake.rs  stream_claim.rs  submit_claim.rs  unstake.rs
test/: SAFUPool.t.sol  SAFUPoolHalmos.t.sol  SAFUPoolV7.t.sol  SAFUPoolV7Halmos.t.sol  SAFUPoolV8.t.sol  SmokeMainnetFork.t.sol
website/: feedback.html  index.html  whitepaper.html
website/css/: styles.css  whitepaper.css
website/js/: abi.js  claim.js  config.js  events.js  init.js  stake.js  state.js  stream.js  ui.js  wallet.js  wc-provider.bundle.js  whitepaper.js
